@@ -1,5 +1,10 @@
 2008-01-04  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/moduleset.py: updated write_dot() method to work with newer
+	module types and to display branch name in label when appropriate.
+
+2008-01-04  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/versioncontrol/svn.py: protect tree_id() against svn info
 	errors.
 
